2010-04-17 Homer Xing <homer.xing@gmail.com>

    * Add "Contributing to Ailurus" dialog in "Others" menu.
    * Optimize source code: replace FileServer by Chdir.

2010-04-16 Homer Xing <homer.xing@gmail.com>

    * Implement "Fastest repository" pane for Fedora.
    * Fix bug: If netbeans 6.5 is installed, then "Netbeans 6.8" item is displayed as installed. (issue 47)
    * Fix bug: If TeXLive 2007 is installed, then "TeXLive" item is not displayed as installed. (issue 47)
    * Fix issue: firefox.nopango.desktop should be put in /usr/local (issue 221)
    * Shows version when report errors. 
    * Split WINE into "WINE 1.0" & "WINE 1.2".
    * Fix bug: Error in parsing "tasksel --task-packages" output when warning messages are output. (issue 257)
    * Fix bug: OpenJDK cannot be installed or removed.
    * Display more message when "Disable GETTY" failed.

2010-04-16 HUANG Wei <wei.kukey@gmail.com>

    * Add Audacity, a music editor.

2010-04-11 MA Yue <velly.empire@gmail.com>

    * Add Acire, a Python code fragment manager.
    * Fix bug: cannot install bluez-gnome.
    * Add a new icon for "Ailurus quick start"
    * Add game "World of Padman".
    * Fix bug: cannot speed up Firefox

2010-04-11 Homer Xing <homer.xing@gmail.com>

    * Fix bug: Error happens when there is no sub-items in a big category. 

2010-04-11 CHEN Yangyang <skabyy@gmail.com>

    * Add "Query before exit" dialog with "Do not query again" checkbutton.
    * Add "Query before exit" menuitem in preferences menu.
    * Add OSD-Lyrics installation.
    * Move the "Start quick setup" button to the top of the "Install and Remove" pane.
    * Add "Hide start quick setup button" menuitem in preferences menu.
    * Add a function returned a button with image
    * Cut down start up time of "clean up pane" to less than 1 second.

2010-04-08 Homer Xing <homer.xing@gmail.com>

    * Fix bug: "apt-get update" run two times before install songbird.